Added href to Facebook in menu

--- a/404.html
+++ b/404.html
@@ -31,6 +31,7 @@
             <li><a id="about" href="/about.html">O projekcie</a></li>
             <li><a id="last_post" href="^link^">Ostatnio udostępniony wpis</a></li>
             <li><a id="stories" href="/stories.html">Przysłane historie</a></li>
+            <li><a id="facebook" href="https://www.facebook.com/Historie-Nigdy-Nieopowiedziane-125456206390865">Facebook</a></li>
             <li><a id="instagram" href="https://www.instagram.com/historie.nigdy.nieopowiedziane/">Instagram</a></li>
             <li><a id="source" href="https://github.com/Barpotroszek/historie_nigdy_nieopowiedziane">Kod źródłowy</a>
             </li>
