--- a/post.html
+++ b/post.html
@@ -33,7 +33,7 @@
             <li><a id="stories" href="/stories.html">Przysłane historie</a></li>
             <li><a id="facebook" href="https://www.facebook.com/Historie-Nigdy-Nieopowiedziane-125456206390865">Facebook</a></li>
             <li><a id="instagram" href="https://www.instagram.com/historie.nigdy.nieopowiedziane/">Instagram</a></li>
-            <li><a id="source" href="https://github.com/Barpotroszek/historie_nigdy_nieopowiedziane">Kod źródłowy</a>
+            <li><a id="source" href="https://github.com/Nieopowiedziane/nieopowiedziane.github.io">Kod źródłowy</a>
             </li>
         </ol>
     </div>
