--- a/stories.html
+++ b/stories.html
@@ -6,10 +6,11 @@
     <link rel="shortcut icon" href="flavicon.ico">    
     <link href="style/container.css" rel="stylesheet" type="text/css" />
     <link href="style/posts.css" rel="stylesheet" type="text/css" />
+    <link href="style/posts2.css" rel="stylesheet" type="text/css" />
     <link href="style/main.css" rel="stylesheet" type="text/css" />
 
     <script type=text/javascript src="main.js"></script>
-    <title> | Historie nigdy nieopowiedziane</title>
+    <title>Historie nigdy nieopowiedziane</title>
 
     <a href="/">
         <h1 id="nagłówek">Historie nigdy nieopowiedziane</h1>
@@ -45,8 +46,8 @@
 <body>
     <dl class='data-out'>
         <dt id="story-title"></dt>
-        <dd id="content" class="">
-        </dd>
+        <div id="content">
+        </div>
     </dl>
     <button id='go_back' class="data-in buttons">Powrót</button>
 </body>
