Removed href from title

--- a/post.html
+++ b/post.html
@@ -44,8 +44,7 @@
 
 <body>
     <dl class='data-out'>
-        <dt id="story-title">&nbsp; <a href="../stories/^link^" , id='title-href'>Podziękowania <span
-                    style="font-style: normal;">😊</span></span></a></dt>
+        <dt id="story-title">&nbsp; Podziękowania <span style="font-style: normal;">😊</span></span></dt>
         <p id="story-content">&nbsp;&nbsp; Dziękuję, za Twój wpis. Niedługo będzie dostępny na tej stronie w zakładce:
             ,,<em>Przysłane historie</em>", a także udostępniony na social mediach.</p>
         <p>Zachęcaj innych, może też będą chcieli się czymś podzielić.</p>
